--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.11.14",
     "@types/vue-router": "^2.0.0",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.26",
     "less": "^4.1.3",
     "md5": "^2.3.0",
